# scripts

./: LICENSE  Makefile  README.md
crons/battery_status/: battery_controller.sh
dck_scripts/hasura/: docker-compose.yml
dck_scripts/mongo/: docker-compose.yml
dck_scripts/mysql/: docker-compose.yml
dck_scripts/postgres/: docker-compose.yml
dck_scripts/rabbitmq/: Dockerfile  docker-compose.yml
dck_scripts/redis/: docker-compose.yml
git_management/: .gitignore  clone.py  links.py  pyproject.toml
terminal_sources/: aliases  functions
