[tool.poetry]
name = "git_management"
version = "0.1.0"
description = ""
authors = ["Angel Felipe Santaliestra Pasias <afsantaliestra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
yapf = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
